@@ -1,0 +1,1 @@
+java -cp lib\cobertura.jar net.sourceforge.cobertura.instrument.Main %*
